@@ -23,7 +23,10 @@ Config:
 - count (uint, optional):
 	Number of instances of the delimiter that should be encountered before
 	returning a record. Defaults to 1. Setting to 0 has no effect, 0 and 1
-	will be treated identically.
+	will be treated identically. Often used in conjunction with the
+	:ref:`deliver_incomplete_final <config_common_splitter_parameters>`
+	option set to true, to ensure trailing partial records are still
+	delivered.
 
 Example:
 
@@ -33,6 +36,7 @@ Example:
 	type = "TokenSplitter"
 	delimiter = " "
 
-	[split_every_50th_newline]
+	[split_every_50th_newline_keep_partial]
 	type = "TokenSplitter"
 	count = 50
+	deliver_incomplete_final = true
