@@ -9,6 +9,8 @@ Features
 * Added `count` setting to TokenSplitter to allow splitting on every Nth
   instance of the given delimiter.
 
+* Added `deliver_incomplete_final` setting to SplitterRunner.
+
 Bug Handling
 ------------
 
